kolt build silences konanc JVM warnings on JDK 23+ (#374)
konanc and cinterop are run_konan-wrapper subprocesses; on JDK 23+ they
emit a `sun.misc.Unsafe::objectFieldOffset` and `java.lang.System::load`
warning block per invocation. A project with two `[[cinterop]]` entries
fired this 4 times (2 cinterop + klib + kexe) for 32 lines of noise on a
fresh build.

Pass `--sun-misc-unsafe-memory-access=allow` and
`--enable-native-access=ALL-UNNAMED` to the konanc JVM. Subprocess paths
prepend `-J<flag>` items immediately after the konanc/cinterop binary so
run_konan strips the prefix and forwards them to the JVM; gated at
JDK 23+ since the flags are unrecognised earlier. The native daemon
spawns the JVM directly and uses the bootstrap JDK
(BOOTSTRAP_JDK_VERSION = 25), so its spawnArgv adds the flags
unconditionally — a unit test pins the bootstrap version `>= 23` so
lowering it surfaces as a test failure rather than a daemon-startup
crash.

`jdkMajorVersionFor(config)` is hoisted to a shared helper so the same
`config.build.jdk ?: BOOTSTRAP_JDK_VERSION` parse drives both kolt fmt
(#358) and the new konanc paths.